--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -95,7 +95,7 @@ html
 		.container: #footer
 
 			//- You don't _have_ to include a link saying your site is powered by KeystoneJS, but we appreciate it!
-			p Powered by <a href="http://keystonejs.com" target="_blank">KeystoneJS</a>.
+			p All Rights Reserve 2016. DOST-PCAARRD 2016. 
 
 
 		//- JAVASCRIPT
