Added dynamic slider

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -5,14 +5,17 @@
 */
 
 .navbar-style1{
-	position: absolute;
+	// position: absolute;
   z-index: 8;
   width: 100%;
-	background: rgba(0, 0, 0, 0.6);
-  margin-top: 0px;
+	background: rgba(0, 0, 0, 0.9);
+  margin-bottom: 0px;
+  border-radius: 0px;
 }
 .navbar-brand{
 	padding: 0px;
+	margin-top: 0px;
+  
 }
 
 .links{
@@ -29,22 +32,22 @@
 }
 
 .nav>li>a.active:hover, .nav>li>a.active:focus { 
-		text-decoration: none;
-    color: white;
-    background-color: transparent;
+	text-decoration: none;
+  color: white;
+  background-color: transparent;
 }
 
 .nav>li>a.not-active:hover, .nav>li>a.not-active:focus { 
-		text-decoration: none;
-    color: white;
-    background-color: transparent;
+	text-decoration: none;
+  color: white;
+  background-color: transparent;
 }
 
 .nav>li>a.btn-primary:hover, .nav>li>a.btn-primary:focus{
-		text-decoration: none;
-		color: #fff;
-    background-color: #286090;
-    border-color: #204d74;
+	text-decoration: none;
+	color: #fff;
+  background-color: #286090;
+  border-color: #204d74;
 } 
 
 
@@ -73,7 +76,8 @@
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   z-index: 10;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.1);
+  text-align: left;
 }
 
 /* Declare heights because of positioning of img element */
