--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -17,6 +17,7 @@
 // use in your site stylesheets.
 
 @import "site/variables.less";
+// @import "bootswatch/journal/variables.less";
 
 
 // Site Styles
