--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -23,22 +23,24 @@ block content
 						img(src=image._.heroImage.limit(1020,500))
 						div(class="container")
 							div(class="carousel-caption")
-								h2= image.caption
-								a(class="btn btn-lg btn-primary" href="#" role="button")= image.buttonText
+								!= image.caption
+								if image.buttonText != ""
+									a(class="btn btn-lg btn-primary" href="#" role="button")= image.buttonText
 				else 
 					div(class="item")
 						//- img(class="first-slide" src="/images/slider/1.jpg" alt="First slide")
 						img(src=image._.heroImage.limit(1020,500))
 						div(class="container")
-							div(class="carousel-caption")
+							div(class="carousel-caption" style="text-align: right")
 								h2= image.caption
-								a(class="btn btn-lg btn-primary" href="#" role="button")= image.buttonText
+								if image.buttonText != ""
+									a(class="btn btn-lg btn-primary" href="#" role="button")= image.buttonText
 			
 			//- left amd right arrows
-			a.left.carousel-control(href='#myCarousel', role='button', data-slide='prev')
-				span.glyphicon.glyphicon-chevron-left
-			a.right.carousel-control(href='#myCarousel', role='button', data-slide='next')
-				span.glyphicon.glyphicon-chevron-right
+			//- a.left.carousel-control(href='#myCarousel', role='button', data-slide='prev')
+			//- 	span.glyphicon.glyphicon-chevron-left
+			//- a.right.carousel-control(href='#myCarousel', role='button', data-slide='next')
+			//- 	span.glyphicon.glyphicon-chevron-right
 
 
 	
@@ -98,16 +100,16 @@ block content
 			.col-sm-6
 				<iframe src="https://www.youtube.com/embed/YBx_Ypr2g_E" width="560" height="315" frameborder="0" allowfullscreen=""></iframe>
 	
-	div(style="margin-top: 60px; padding-left: 10vw; padding-right: 10vw;").jumbotron.text-center
-		h2 We'll handle the back end, you handle the front
-		p KeystoneJS isn't opinionated about how you design or build the front-end of your site. Use jQuery, Angular, React.js with LESS, SASS or css-modules and any node.js template language.
-		div We've made this demo site with Bootstrap, Jade and LESS to show how simple it can be to get going, and included some themes from <a href="https://bootswatch.com/?ref=keystonejs" target="_blank">bootswatch</a>. Try them out by selecting below:
-		if themes && themes.length
-			hr(style="margin-bottom: 3em; margin-top: 3em;")
-			ul.nav.nav-pills
-				each theme in themes
-					li(class=currentTheme === theme ? 'active' : '')
-						a(href='/?theme=' + theme)= theme
+	//- div(style="margin-top: 60px; padding-left: 10vw; padding-right: 10vw;").jumbotron.text-center
+	//- 	h2 We'll handle the back end, you handle the front
+	//- 	p KeystoneJS isn't opinionated about how you design or build the front-end of your site. Use jQuery, Angular, React.js with LESS, SASS or css-modules and any node.js template language.
+	//- 	div We've made this demo site with Bootstrap, Jade and LESS to show how simple it can be to get going, and included some themes from <a href="https://bootswatch.com/?ref=keystonejs" target="_blank">bootswatch</a>. Try them out by selecting below:
+	//- 	if themes && themes.length
+	//- 		hr(style="margin-bottom: 3em; margin-top: 3em;")
+	//- 		ul.nav.nav-pills
+	//- 			each theme in themes
+	//- 				li(class=currentTheme === theme ? 'active' : '')
+	//- 					a(href='/?theme=' + theme)= theme
 
 
 
