--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -72,7 +72,6 @@
 /* Carousel base class */
 .carousel {
   height: 500px;
-  margin-bottom: 20px;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
@@ -98,4 +97,8 @@
   left: 0;
   min-width: 100%;
   height: 500px;
+}
+
+.slick-prev:before, .slick-next:before { 
+    color:green !important;
 }
