--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -15,6 +15,9 @@ html
 		//- Customise the stylesheet for your site by editing /public/styles/site.less
 		//- All .less files will be automatically compiled and minified in production.
 		link(href="/styles/site.min.css", rel="stylesheet")
+		
+		link(rel="stylesheet" type="text/css" href="/styles/slick/slick.css")
+		link(rel="stylesheet" type="text/css" href="/styles/slick/slick-theme.css")
 
 		//- This file provides the default styling for the KeystoneJS Content Editor
 		if user && user.canAccessKeystone
@@ -108,6 +111,8 @@ html
 		//- Customise which Bootstrap javascript files are served by including
 		//- them specifically here, instead of bootstrap-3.3.5.min.js
 		script(src='/js/bootstrap/bootstrap-3.3.5.min.js')
+		script(type="text/javascript" src="/styles/slick/slick.min.js")
+		script(src='/js/slider.js')
 
 		//- The KeystoneJS Content Editor provides support for ks-editable data attributes,
 		//- which generate links to edit content for users who can access Keystone
