Finished layouting the technology section

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -51,6 +51,9 @@
   border-color: #204d74;
 } 
 
+.jumbotron{
+	margin-bottom: 0px;
+}
 
 #footer {
 	margin-top: 30px;
@@ -72,6 +75,7 @@
 /* Carousel base class */
 .carousel {
   height: 500px;
+  margin-bottom: 20px;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
@@ -84,6 +88,7 @@
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption > h2 {
   margin-top: 10px;
+  color: white;
 }
 
 /* Declare heights because of positioning of img element */
@@ -102,3 +107,5 @@
 .slick-prev:before, .slick-next:before { 
     color:green !important;
 }
+
+
