--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -15,7 +15,9 @@ html
 		//- Customise the stylesheet for your site by editing /public/styles/site.less
 		//- All .less files will be automatically compiled and minified in production.
 		link(href="/styles/site.min.css", rel="stylesheet")
-		
+		link(rel="stylesheet" type="text/css" href="/styles/cards.css")
+
+		link(rel="stylesheet" type="text/css" href="/styles/technology.css")
 		link(rel="stylesheet" type="text/css" href="/styles/slick/slick.css")
 		link(rel="stylesheet" type="text/css" href="/styles/slick/slick-theme.css")
 
