Added a temporary community button

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -99,6 +99,10 @@ block content
 				div.modal-footer
 					button(type="button" class="btn btn-success" data-dismiss="modal") View More
 					button(type="button" class="btn btn-default" data-dismiss="modal") Close
+
+	div(style='float:right; z-index:100; right:0px; top:300px; background-color:#FFF; width:40;height:40; padding:6px; position: fixed; border-radius:20px;')
+		a(href='#')
+			img( src="/images/community.png" height="40px")
 				
 
 	.jumbotron
