Revised the fiesta panel.

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -8,7 +8,8 @@
 	position: absolute;
   z-index: 8;
   width: 100%;
-	background: rgba(0, 0, 0, 0);
+	//background: rgba(0, 0, 0, 0);
+  background: rgba(20,20,20,0.3);
   margin-bottom: 0px;
   border-radius: 0px;
 }
@@ -75,7 +76,6 @@
 /* Carousel base class */
 .carousel {
   height: 500px;
-  margin-bottom: 20px;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
