--- a/templates/fiesta.jade
+++ b/templates/fiesta.jade
@@ -38,12 +38,12 @@ block content
 			
 			//- left amd right arrows
 			//- a.left.carousel-control(href='#myCarousel', role='button', data-slide='prev')
-			//- 	span.glyphicon.glyphicon-chevron-left
+			//-   span.glyphicon.glyphicon-chevron-left
 			//- a.right.carousel-control(href='#myCarousel', role='button', data-slide='next')
-			//- 	span.glyphicon.glyphicon-chevron-right
+			//-   span.glyphicon.glyphicon-chevron-right
 
 
-	//- .container: .row
+	.container: .row
 		.col-md-9
 			center 
 				h2 FIESTA
@@ -64,7 +64,7 @@ block content
 						img( src="/images/exhibit/bigeyelet.jpg" height="250px")
 				div
 					center 
-						img( src="/images/exhibit/cacao.jpg" height="250px")		
+						img( src="/images/exhibit/cacao.jpg" height="250px")    
 		.col-md-3
 			center
 				h2 Upcoming Exhibits
@@ -80,79 +80,7 @@ block content
 					+item("SARAI Exhibit", "Mar 11, 2017")
 					+item("SIPAG Fiesta", "Mar 30, 2017")
 
-	#fiesta_block.fh5co-project-style-3
-		.row
-			.col-md-12
-				center
-					img.img-responsive(src='/images/fiesta-2.png', alt='Image' width="1200px;" height="200px;")
-		.container
-			.row.p-b
-				.col-md-12
-					h2.fh5co-heading-fiesta FIESTA
-				.col-md-8
-					p.fiesta We develop new technologies and innovations that increase farm yield and crop productivity, produce pest resistant and drought tolerant seeds, and develop healthier swine and goat stocks resilient in diseases, among other breakthroughs.
-		.row.p-b
-			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
-				a.fh5co-project-item(href='#', style='background-image: url(/images/fiesta/potato.jpg);', target='_blank')
-					img.img-responsive.sr-only(src='/images/fiesta/potato.jpg')
-					.fh5co-overlay
-					.fh5co-text
-						.tech-category CLARRDEC
-						h3 Sweet Potato
-						p Date: Mar 17-18, 2016
-						p Venue: Tarlac College of Agriculture
-
-			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
-				a.fh5co-project-item(href='#', style='background-image: url(/images/fiesta/sipagfiesta.png);', target='_blank')
-					img.img-responsive.sr-only(src='/images/fiesta/sipagfiesta.png')
-					.fh5co-overlay
-					.fh5co-text
-						.tech-category PCAARRD
-						h3 SIPAG FIESTA
-						p Date: Mar 2-4, 2016
-						p Venue: PCAARRD Complex
-
-			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
-				a.fh5co-project-item(href='#', style='background-image: url(/images/fiesta/rootcrop.jpg);', target='_blank')
-					img.img-responsive.sr-only(src='/images/fiesta/rootcrop.jpg')
-					.fh5co-overlay
-					.fh5co-text
-						.tech-category VICARP
-						h3 Rootcrop
-						p Date: Aug 10-11, 2015
-						p Venue: Visayas State University
-
-			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
-				a.fh5co-project-item(href='', style='background-image: url(/images/fiesta/kalabaw.jpg);', target='_blank')
-					img.img-responsive.sr-only(src='/images/fiesta/kalabaw.jpg')
-					.fh5co-overlay
-					.fh5co-text
-						.tech-category CLARRDEC
-						h3 Pistang Kalabaw
-						p Date: Mar 25-27, 2015
-						p Venue: PCC, Munoz, Nueva Ecija
-
-			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
-				a.fh5co-project-item(href='#', style='background-image: url(/images/fiesta/seaweed.jpg);', target='_blank')
-					img.img-responsive.sr-only(src='/images/fiesta/seaweed.jpg')
-					.fh5co-overlay
-					.fh5co-text
-						.tech-category SMARRDEC
-						h3 Seaweed
-						p Date: Nov 27-28, 2014
-						p Venue: Passig Islet, Davao del Sur 
-
-			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
-				a.fh5co-project-item(href='#', style='background-image: url(/images/fiesta/sardines.jpg);', target='_blank')
-					img.img-responsive.sr-only(src='/images/fiesta/sardines.jpg')
-					.fh5co-overlay
-					.fh5co-text
-						.tech-category WESMARRDEC
-						h3 Sardines
-						p Date: Oct 9-10, 2014
-						p Venue: Western Mindanao  State University, Zamboanga City
-
-	//- div(class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true")
+	div(class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true")
 		div.modal-dialog(role="document")
 			div.modal-content
 				div.modal-header
@@ -177,7 +105,7 @@ block content
 			img( src="/images/community.png" height="40px")
 				
 
-	//- .jumbotron
+	.jumbotron
 		.container: .row
 			.col-sm-6
 				.h3 Pushing the Best of the Strategic Industry Science and Technology Program for Agri-Aqua Growth (SIPAG) through FIESTA
@@ -277,7 +205,7 @@ block content
 						h3 Adding higher value to abaca
 			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
 				a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/bamboo.jpg);', target='_blank')
-					img.img-responsive.sr-only(src='/images/exhibit/bamboo.jpg', alt='Image')
+					img.img-responsive.sr-only(src='ima/images/exhibitges/bamboo.jpg', alt='Image')
 					.tech-icon
 						img(src='/images/exhibit/nr.png')
 					.fh5co-overlay
@@ -317,7 +245,17 @@ block content
 				p.button-link
 					a.btn.btn-primary.btn-lg(href='#', style='line-height:30px')
 						span(style='vertical-align:middle;') See more of our technologies
-						i.icon.icon-chevron-right(style='font-size:20px;vertical-align:middle;')		
+						i.icon.icon-chevron-right(style='font-size:20px;vertical-align:middle;')    
+	//- div(style="margin-top: 60px; padding-left: 10vw; padding-right: 10vw;").jumbotron.text-center
+	//-   h2 We'll handle the back end, you handle the front
+	//-   p KeystoneJS isn't opinionated about how you design or build the front-end of your site. Use jQuery, Angular, React.js with LESS, SASS or css-modules and any node.js template language.
+	//-   div We've made this demo site with Bootstrap, Jade and LESS to show how simple it can be to get going, and included some themes from <a href="https://bootswatch.com/?ref=keystonejs" target="_blank">bootswatch</a>. Try them out by selecting below:
+	//-   if themes && themes.length
+	//-     hr(style="margin-bottom: 3em; margin-top: 3em;")
+	//-     ul.nav.nav-pills
+	//-       each theme in themes
+	//-         li(class=currentTheme === theme ? 'active' : '')
+	//-           a(href='/?theme=' + theme)= theme
 
 
 
