Fixed search button

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -112,15 +112,15 @@
 .search-form .form-group {
   float: right !important;
   transition: all 0.35s, border-radius 0s;
-  width: 32px;
-  height: 32px;
+  width: 40px;
+  height: 40px;
   background-color: #fff;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
   border-radius: 25px;
   border: 1px solid #ccc;
 }
 .search-form .form-group input.form-control {
-  padding-right: 20px;
+  padding-right: 30px;
   border: 0 none;
   background: transparent;
   box-shadow: none;
@@ -143,12 +143,10 @@
 .search-form .form-group:hover,
 .search-form .form-group.hover {
   width: 100%;
-  border-radius: 4px 25px 25px 4px;
+  border-radius: 25px;
 }
 .search-form .form-group span.form-control-feedback {
   position: absolute;
-  top: -1px;
-  right: -2px;
   z-index: 2;
   display: block;
   width: 34px;
@@ -157,7 +155,6 @@
   text-align: center;
   color: #3596e0;
   left: initial;
-  font-size: 14px;
+  font-size: 30px;
 }
-
 
