--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -174,13 +174,13 @@ block content
 
 	div(style='float:right; z-index:100; right:0px; top:400px; background-color:#EEE; width:40;height:40; padding:6px; position: fixed; border-radius:20px;')
 		a(href='#')
-			img( src="/images/community.png" height="25px")
+			img( src="/images/community.png" height="30px")
 
 	div(style='float:right; z-index:100; right:0px; top:450px;  position: fixed; ')
 		form.search-form(action='')
 			.form-group.has-feedback
-				label.sr-only(for='search') SEARCH
-				input#search.form-control(type='text', name='search', placeholder='search')
+				label.sr-only(for='search') Search
+				input#search.form-control(type='text', name='search', placeholder='Search')
 				span.glyphicon.glyphicon-search.form-control-feedback
 				
 
