Fixed position of search and community button

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -172,18 +172,17 @@ block content
 					button(type="button" class="btn btn-success" data-dismiss="modal") View More
 					button(type="button" class="btn btn-default" data-dismiss="modal") Close
 
-	div(style='float:right; z-index:100; right:0px; top:400px; background-color:#EEE; width:40;height:40; padding:6px; position: fixed; border-radius:20px;')
+	div(style='float:right; z-index:100; right:0px; top:100px; background-color:#EEE; width:40;height:40; padding:6px; position: fixed; border-radius:20px;')
 		a(href='#')
 			img( src="/images/community.png" height="30px")
 
-	div(style='float:right; z-index:100; right:0px; top:450px;  position: fixed; ')
+	div(style='float:right; z-index:100; right:0px; top:150px;  position: fixed; ')
 		form.search-form(action='')
 			.form-group.has-feedback
 				label.sr-only(for='search') Search
 				input#search.form-control(type='text', name='search', placeholder='Search')
 				span.glyphicon.glyphicon-search.form-control-feedback
 				
-
 	//- .jumbotron
 		.container: .row
 			.col-sm-6
@@ -318,13 +317,12 @@ block content
 					.fh5co-text
 						.tech-category AGRICULTURE
 						h3 Enhancing peanut productivity
-			.clearfix.visible-sm-block
-		.row.p
-			.col-md-12.text-center
-				p.button-link
-					a.btn.btn-primary.btn-lg(href='#', style='line-height:30px')
-						span(style='vertical-align:middle;') See more of our technologies
-						i.icon.icon-chevron-right(style='font-size:20px;vertical-align:middle;')		
+		//- .row.p
+		//- 	.col-md-12.text-center
+		//- 		p.button-link
+		//- 			a.btn.btn-primary.btn-lg(href='#', style='line-height:30px')
+		//- 				span(style='vertical-align:middle;') See more of our technologies
+		//- 				i.icon.icon-chevron-right(style='font-size:20px;vertical-align:middle;')		
 
 
 
