--- a/templates/views/fiesta.jade
+++ b/templates/views/fiesta.jade
@@ -41,70 +41,18 @@ block content
 			//-   span.glyphicon.glyphicon-chevron-left
 			//- a.right.carousel-control(href='#myCarousel', role='button', data-slide='next')
 			//-   span.glyphicon.glyphicon-chevron-right
-
-
-	.container: .row
-		.col-md-9
-			center 
-				h2 FIESTA
-				h4 Showcase of the best outputs in agriculture and aquatic research and development
-			div.slick-slider
-				div
-					center 
-						a#pop(href="#")
-							img( src="/images/exhibit/sipagfiesta.png" id="imageresource" height="250px")
-				div
-					center 
-						img( src="/images/exhibit/knifefish.jpg" height="250px")
-				div
-					center 
-						img( src="/images/exhibit/mango.jpg" height="250px")
-				div
-					center 
-						img( src="/images/exhibit/bigeyelet.jpg" height="250px")
-				div
-					center 
-						img( src="/images/exhibit/cacao.jpg" height="250px")    
-		.col-md-3
-			center
-				h2 Upcoming Exhibits
-				
-				mixin item(title, content)
-					a.list-group-item(href="#")
-						h4.list-group-item-heading #{title}
-						p.list-group-item-text #{content}
-
-				div.list-group
-					+item("FIESTA Abaca", "Feb 25, 2017")
-					+item("Coconut FIESTA", "Mar 4, 2017")
-					+item("SARAI Exhibit", "Mar 11, 2017")
-					+item("SIPAG Fiesta", "Mar 30, 2017")
-
-	div(class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true")
-		div.modal-dialog(role="document")
-			div.modal-content
-				div.modal-header
-					button(type="button" class="close" data-dismiss="modal" aria-label="Close")
-						span(aria-hidden="true") &times;
-					h5.modal-title SIPAG FIESTA
-					
-				div.modal-body
-					center
-						img( src="" id="imagepreview" height="200px")
-						p
-						h4 Commodity: ALL
-						h4 Date: March 2, 2016 - March 4, 2016
-						h4 Venue: PCAARRD Complex
-				
-				div.modal-footer
-					button(type="button" class="btn btn-success" data-dismiss="modal") View More
-					button(type="button" class="btn btn-default" data-dismiss="modal") Close
-
-	div(style='float:right; z-index:100; right:0px; top:400px; background-color:#FFF; width:40;height:40; padding:6px; position: fixed; border-radius:20px;')
+		
+	div(style='float:right; z-index:100; right:0px; top:100px; background-color:#EEE; width:40;height:40; padding:6px; position: fixed; border-radius:20px;')
 		a(href='#')
-			img( src="/images/community.png" height="40px")
-				
+			img( src="/images/community.png" height="30px")
 
+	div(style='float:right; z-index:100; right:0px; top:150px;  position: fixed; ')
+		form.search-form(action='')
+			.form-group.has-feedback
+				label.sr-only(for='search') Search
+				input#search.form-control(type='text', name='search', placeholder='Search')
+				span.glyphicon.glyphicon-search.form-control-feedback
+					
 	.jumbotron
 		.container: .row
 			.col-sm-6
@@ -118,144 +66,3 @@ block content
 
 			.col-sm-6
 				<iframe src="https://www.youtube.com/embed/YBx_Ypr2g_E" width="560" height="315" frameborder="0" allowfullscreen=""></iframe>
-
-
-	#tech_block.fh5co-project-style-3
-		.container
-			.row.p-b
-				.col-md-12
-					h2.fh5co-heading Technologies
-				.col-md-8
-					p We develop new technologies and innovations that increase farm yield and crop productivity, produce pest resistant and drought tolerant seeds, and develop healthier swine and goat stocks resilient in diseases, among other breakthroughs.
-		.row.p-b
-			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
-				a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2583-new-fusarium-wilt-resistant-cavendish-passed-export-market-standards', style='background-image: url(/images/exhibit/cavendish.jpg);', target='_blank')
-					img.img-responsive.sr-only(src='/images/exhibit/cavendish.jpg', alt='Image')
-					.tech-icon
-						img(src='/images/exhibit/agri.png')
-					.fh5co-overlay
-					.fh5co-text
-						.tech-category AGRICULTURE
-						h3 Cavendish resistant to Fusarium Wilt
-			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
-				a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2659-biofloc-technology-to-reduce-risk-of-diseases-and-enhance-nutrition-in-shrimp-farms', style='background-image: url(/images/exhibit/shrimp.jpg);', target='_blank')
-					img.img-responsive.sr-only(src='/images/exhibit/shrimp.jpg', alt='Image')
-					.tech-icon
-						img(src='/images/exhibit/aqua.png')
-					.fh5co-overlay
-					.fh5co-text
-						.tech-category AQUATIC RESOURCE
-						h3 Shrimp biofloc technology
-			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
-				a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2673-carrageenan-boosts-rice-production', style='background-image: url(/images/exhibit/cpgr.jpg);', target='_blank')
-					img.img-responsive.sr-only(src='/images/exhibit/cpgr.jpg', alt='Image')
-					.tech-icon
-						img(src='/images/exhibit/aqua.png')
-					.fh5co-overlay
-					.fh5co-text
-						.tech-category AQUATIC RESOURCE
-						h3 Carrageenan Plant Growth Regulator (CPGR)
-			.clearfix.visible-sm-block
-			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
-				a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2581-somatic-embryogenesis-a-promising-technology-to-mass-propagate-coconut', style='background-image: url(/images/exhibit/coco.jpg);', target='_blank')
-					img.img-responsive.sr-only(src='/images/exhibit/coco.jpg', alt='Image')
-					.tech-icon
-						img(src='/images/exhibit/agri.png')
-					.fh5co-overlay
-					.fh5co-text
-						.tech-category AGRICULTURE
-						h3 Coconut Somatic Embryogenesis
-			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
-				a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2664-restoring-the-country-s-coral-reefs-through-filipinnovation', style='background-image: url(/images/exhibit/coral.jpg);', target='_blank')
-					img.img-responsive.sr-only(src='/images/exhibit/coral.jpg', alt='Image')
-					.tech-icon
-						img(src='/images/exhibit/aqua.png')
-					.fh5co-overlay
-					.fh5co-text
-						.tech-category AGRICULTURE
-						h3 Corals asexual reproduction
-			.clearfix.visible-sm-block
-			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
-				a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2666-sarai-smarter-moves-for-a-competitive-agriculture', style='background-color:yellow;padding-top:50%;', target='_blank')
-					h2(style='color: darkgreen;font-weight: bold;') Smarter Agriculture
-					.tech-icon
-						img(src='/images/exhibit/nr.png')
-					.fh5co-overlay
-					.fh5co-text
-						.tech-category NATURAL RESOURCE
-						h4 | Smarter Approaches to Reinvigorate Agriculture as an Industry in the Philippines (SARAI)
-			.clearfix.visible-sm-block
-			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
-				a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2676-swine-genomics-to-help-improve-the-industry-s-productivity', style='background-image: url(/images/exhibit/pigs.jpg);', target='_blank')
-					img.img-responsive.sr-only(src='/images/exhibit/pigs.jpg', alt='Image')
-					.tech-icon
-						img(src='/images/exhibit/agri.png')
-					.fh5co-overlay
-					.fh5co-text
-						.tech-category AGRICULTURE
-						h3 Swine genomics
-			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
-				a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/abaca.jpg);', target='_blank')
-					img.img-responsive.sr-only(src='/images/exhibit/abaca.jpg', alt='Image')
-					.tech-icon
-						img(src='/images/exhibit/agri.png')
-					.fh5co-overlay
-					.fh5co-text
-						.tech-category AGRICULTURE
-						h3 Adding higher value to abaca
-			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
-				a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/bamboo.jpg);', target='_blank')
-					img.img-responsive.sr-only(src='ima/images/exhibitges/bamboo.jpg', alt='Image')
-					.tech-icon
-						img(src='/images/exhibit/nr.png')
-					.fh5co-overlay
-					.fh5co-text
-						.tech-category NATURAL RESOURCE
-						h3 Bamboo: green gold from the forests
-			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
-				a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/tilapia.jpg);', target='_blank')
-					img.img-responsive.sr-only(src='/images/exhibit/tilapia.jpg', alt='Image')
-					.tech-icon
-						img(src='/images/exhibit/aqua.png')
-					.fh5co-overlay
-					.fh5co-text
-						.tech-category AQUATIC RESOURCE
-						h3 Tilapia farming technologies
-			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
-				a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/coffee.jpg);', target='_blank')
-					img.img-responsive.sr-only(src='/images/exhibit/coffee.jpg', alt='Image')
-					.tech-icon
-						img(src='/images/exhibit/agri.png')
-					.fh5co-overlay
-					.fh5co-text
-						.tech-category AGRICULTURE
-						h3 Quality planting materials for a better coffee
-			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
-				a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/peanuts.jpg);', target='_blank')
-					img.img-responsive.sr-only(src='/images/exhibit/peanuts.jpg', alt='Image')
-					.tech-icon
-						img(src='/images/exhibit/agri.png')
-					.fh5co-overlay
-					.fh5co-text
-						.tech-category AGRICULTURE
-						h3 Enhancing peanut productivity
-			.clearfix.visible-sm-block
-		.row.p
-			.col-md-12.text-center
-				p.button-link
-					a.btn.btn-primary.btn-lg(href='#', style='line-height:30px')
-						span(style='vertical-align:middle;') See more of our technologies
-						i.icon.icon-chevron-right(style='font-size:20px;vertical-align:middle;')    
-	//- div(style="margin-top: 60px; padding-left: 10vw; padding-right: 10vw;").jumbotron.text-center
-	//-   h2 We'll handle the back end, you handle the front
-	//-   p KeystoneJS isn't opinionated about how you design or build the front-end of your site. Use jQuery, Angular, React.js with LESS, SASS or css-modules and any node.js template language.
-	//-   div We've made this demo site with Bootstrap, Jade and LESS to show how simple it can be to get going, and included some themes from <a href="https://bootswatch.com/?ref=keystonejs" target="_blank">bootswatch</a>. Try them out by selecting below:
-	//-   if themes && themes.length
-	//-     hr(style="margin-bottom: 3em; margin-top: 3em;")
-	//-     ul.nav.nav-pills
-	//-       each theme in themes
-	//-         li(class=currentTheme === theme ? 'active' : '')
-	//-           a(href='/?theme=' + theme)= theme
-
-
-
